# assdraw-rs

./: Cargo.toml  build.rs
src/: app.rs  ass.rs  ass_outline.rs  blue.glsl  canvas.rs  draw.glsl  drawing.rs  fs.glsl  gl.rs  main.rs  nwg_util.rs  point.rs  ui.rs  undo.rs  vk.rs  vs.glsl
src/ass/: bitmap.rs  outline.rs  polyline.rs  rasterizer.rs  utils.rs
src/ass/utils/: weirdvec.rs
src/gl/: abstraction.rs  get.rs
src/gl/abstraction/: buffer.rs  error.rs  program.rs  shader.rs  texture.rs  vertex_array.rs
