[package]
name = "assdraw-rs"
version = "0.1.0"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"

[dependencies]
native-windows-gui = "1.0.10"
glutin = "0.26.0"
gl = "0.14.0"
bytemuck = "1.5.0"
clipboard-win = "4.0.3"
image = "0.23.12"
thiserror = "1.0.23"
num_enum = "0.5.1"
cstr = "0.2.8"
once_cell = "1.5.2"
itertools = "0.10.0"
ab_glyph_rasterizer = "0.1.4"
winapi = "0.3.9"
num-traits = "0.2.14"
either = "1.6.1"
byte_set = "0.1.3"
pretty_dtoa = "0.1.0"

[profile.release]
lto = true
